--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "archive": "tar -cf dist/dist.tar -C dist ."
   },
   "devDependencies": {
     "typescript": "~5.6.2",
