--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "archive": "tar -cf dist/dist.tar -C dist ."
+    "archive": "tar -cf dist/dist.tar -C dist .",
+    "lint": "biome lint .",
+    "format": "biome format --write .",
+    "check": "biome check --write ."
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.8",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
     "vite-plugin-html": "^3.2.2"
