--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules"]
 }
