--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "tompd63a-web-ui",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "0.1.0",
   "type": "module",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/klevytskyi/tompd63-web-ui.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,10 +15,14 @@
     "archive": "tar -cf dist/dist.tar -C dist .",
     "lint": "biome lint .",
     "format": "biome format --write .",
-    "check": "biome check --write ."
+    "check": "biome check --write .",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
+    "husky": "^9.1.7",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
     "vite-plugin-html": "^3.2.2"
